# MVP

./: .gitignore  README.md  icons_launcher.yaml  pubspec.yaml
android/: build.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/.github/workflows/: ci.yml
backend/app/: main.py
backend/app/api/: deps.py  routes.py
backend/app/core/: config.py  security.py
backend/app/db/: vector_store.py
backend/app/models/: schema.py
backend/app/services/: chat.py  ingest.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  pubsec.yaml
lib/models/: messagemodel.dart  usermodel.dart
lib/screens/: chat_screen.dart  login_screen.dart  map_screen.dart  splash_screen.dart
lib/server/: app.py  faiss_index  requirements.txt
lib/server/data/: handbook.csv
lib/server/rag_backend/: process_documents.py  requirements.txt
lib/server/rag_backend/faiss_index/: index.faiss  index.pkl
lib/services/: ai_service.dart  auth_service.dart  storage_service.dart
lib/utils/: constant.dart  theme.dart
lib/widgets/: chat_bubble.dart  chat_button.dart  chat_input.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+1 files in other folders)
