[tool.poetry]
name = "campus-guide-ai-backend"
version = "0.1.0"
description = "Backend server for Campus Guide AI"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.95.1"
uvicorn = {extras = ["standard"], version = "0.22.0"}
langchain = "0.0.289"
pypdfium2 = "4.19.0"
sentence-transformers = "2.2.2"
transformers = "4.30.2"
numpy = "1.24.3"
torch = {version = "2.0.1+cpu", source = "pytorch"}
faiss-cpu = "1.7.4"
python-dotenv = "1.0.0"
python-multipart = "0.0.6"
tenacity = "8.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.2"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 